Bug 61297 - fix rel=prerender target types
Summary: fix rel=prerender target types
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-23 12:23 PDT by Gavin Peters
Modified: 2011-05-23 16:50 PDT (History)
6 users (show)

See Also:


Attachments
Patch (2.88 KB, patch)
2011-05-23 12:26 PDT, Gavin Peters
no flags Details | Formatted Diff | Diff
Patch (3.31 KB, patch)
2011-05-23 12:35 PDT, Gavin Peters
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Gavin Peters 2011-05-23 12:23:11 PDT
fix rel=prerender target types
Comment 1 Gavin Peters 2011-05-23 12:26:32 PDT
Created attachment 94459 [details]
Patch
Comment 2 Gavin Peters 2011-05-23 12:28:16 PDT
Comment on attachment 94459 [details]
Patch

I have learned a valuable lesson; always test the chrome side of a webkit patch that has chrome implication before uploading to WebKit.
Comment 3 Adam Barth 2011-05-23 12:30:10 PDT
Comment on attachment 94459 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=94459&action=review

> Source/WebCore/ChangeLog:10
> +	The original fix in https://bugs.webkit.org/show_bug.cgi?id=61079
> +	didn't properly map the target type, and didn't carry the target
> +	types through to chromium properly.  Fixed.

Bad indent.

> Source/WebCore/ChangeLog:12
> +        No new tests.

How come?
Comment 4 WebKit Review Bot 2011-05-23 12:30:39 PDT
Attachment 94459 [details] did not pass style-queue:

Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1

Source/WebKit/chromium/ChangeLog:8:  Line contains tab character.  [whitespace/tab] [5]
Source/WebKit/chromium/ChangeLog:9:  Line contains tab character.  [whitespace/tab] [5]
Source/WebKit/chromium/ChangeLog:10:  Line contains tab character.  [whitespace/tab] [5]
Source/WebCore/ChangeLog:8:  Line contains tab character.  [whitespace/tab] [5]
Source/WebCore/ChangeLog:9:  Line contains tab character.  [whitespace/tab] [5]
Source/WebCore/ChangeLog:10:  Line contains tab character.  [whitespace/tab] [5]
Total errors found: 6 in 4 files


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 5 Gavin Peters 2011-05-23 12:35:54 PDT
Created attachment 94463 [details]
Patch
Comment 6 Gavin Peters 2011-05-23 12:36:19 PDT
Comment on attachment 94463 [details]
Patch

tabsbegone, explanation about testing.
Comment 7 WebKit Commit Bot 2011-05-23 16:50:32 PDT
Comment on attachment 94463 [details]
Patch

Clearing flags on attachment: 94463

Committed r87106: <http://trac.webkit.org/changeset/87106>
Comment 8 WebKit Commit Bot 2011-05-23 16:50:38 PDT
All reviewed patches have been landed.  Closing bug.